<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_mob_ad_badge">Ad</string>
    <string name="ad_units">Ad Units</string>
    <string name="address">Address</string>
    <string name="address_not_found">No address found</string>
    <string name="ads">Ad</string>
    <string name="ads_sdk_version">SDK Version</string>
    <string name="advertisement_network_settings">Advertisement Network Settings</string>
    <string name="age_restricted_user">Age Restricted User</string>
    <string name="allow">Allow</string>
    <string name="altitude">Altitude</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apd_admob_banner_ad_text">Ad</string>
    <string name="apd_admob_banner_body_tools">Install Flood-It App for free! Free Popular Casual Game</string>
    <string name="apd_admob_banner_cta_tools">INSTALL</string>
    <string name="apd_admob_banner_headline_tools">Test Ad : Flood-It!</string>
    <string name="apd_admob_banner_icon_decs">Admob banner icon</string>
    <string name="api_level">API Level</string>
    <string name="app_id">Application ID</string>
    <string name="app_name">Speedometer</string>
    <string name="app_review_status">App Review Status</string>
    <string name="app_settings">App Settings</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_info">Application Info</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="appodeal_app_key">27a5243a19eae08f20a30ca7b0be7334ece5bcf58762997f</string>
    <string name="aps_mraid_close_button">Interstitial close button</string>
    <string name="ask_later">Ask me later</string>
    <string name="auto_pause">Auto pause</string>
    <string name="auto_pause_hint">Time automatically pauses when speed is 0.</string>
    <string name="average">Average</string>
    <string name="battery">Battery</string>
    <string name="battery_optimization">Disable battery optimization</string>
    <string name="battery_optimization_dialog_hint">It seems the app was closed due to insufficient memory. Disabling battery optimization in the settings may help reduce the risk of unexpected closures.</string>
    <string name="battery_optimization_hint">Prevents the system from unexpectedly shutting down the app</string>
    <string name="bigo_ad_about_app_default">About this app</string>
    <string name="bigo_ad_click_to_try">Click to try?</string>
    <string name="bigo_ad_comment_num_text">Reviews</string>
    <string name="bigo_ad_cta_default">View more</string>
    <string name="bigo_ad_cta_download_default">Install</string>
    <string name="bigo_ad_description_default">Free access now!</string>
    <string name="bigo_ad_double_video_choose_video">Choose your favorite video</string>
    <string name="bigo_ad_double_video_count_down">Auto-play in %ds</string>
    <string name="bigo_ad_download_num_text">Downloads</string>
    <string name="bigo_ad_feedback_copied">Ad ERID copied</string>
    <string name="bigo_ad_feedback_copy_ad_id">ERID: %s</string>
    <string name="bigo_ad_feedback_copy_link">Copy link</string>
    <string name="bigo_ad_feedback_hide_ads">Hide ADs</string>
    <string name="bigo_ad_feedback_link_copied">Link copied</string>
    <string name="bigo_ad_feedback_rec_rule">Recommendation Rules</string>
    <string name="bigo_ad_feedback_report_ads">Report ADs</string>
    <string name="bigo_ad_feedback_user_privacy">Privacy</string>
    <string name="bigo_ad_feedback_why_this_ad">About this advertiser</string>
    <string name="bigo_ad_form_agree">I Agree</string>
    <string name="bigo_ad_form_cancel">Cancel</string>
    <string name="bigo_ad_form_privacy_content">By submitting this form, you agree to send your personal information to BIGO Ads and {company_name}. BIGO Ads and {company_name} will use this information in accordance with their own privacy policy. View BIGO’s Privacy Policy and {company_name}’s Privacy Policy.</string>
    <string name="bigo_ad_form_privacy_notice">Privacy Notice</string>
    <string name="bigo_ad_form_question_hint">Please Enter</string>
    <string name="bigo_ad_form_submit">Submit</string>
    <string name="bigo_ad_form_warning">The answer is required</string>
    <string name="bigo_ad_ic_application">Application</string>
    <string name="bigo_ad_ic_blank">%s</string>
    <string name="bigo_ad_ic_everyone">Everyone</string>
    <string name="bigo_ad_ic_recommended">Recommended</string>
    <string name="bigo_ad_ic_web">Web</string>
    <string name="bigo_ad_interaction_jump_hint">Jump to details page or third party app</string>
    <string name="bigo_ad_interaction_shake">Shake</string>
    <string name="bigo_ad_interaction_slide">Slide</string>
    <string name="bigo_ad_interaction_twist">Twist</string>
    <string name="bigo_ad_link_copied">Link copied</string>
    <string name="bigo_ad_lose_reward">You will lose your reward.</string>
    <string name="bigo_ad_multi_img_more_text">MORE</string>
    <string name="bigo_ad_resume">Resume</string>
    <string name="bigo_ad_skip">Skip</string>
    <string name="bigo_ad_skip_video">Skip video?</string>
    <string name="bigo_ad_splash_skip">SKIP</string>
    <string name="bigo_ad_splash_skip_after">Skip after</string>
    <string name="bigo_ad_tag">Ad</string>
    <string name="bigo_ad_tag_back">bigo_ad_tag_back</string>
    <string name="bigo_ad_tag_close">bigo_ad_tag_close</string>
    <string name="bigo_ad_tag_forward">bigo_ad_tag_forward</string>
    <string name="bigo_ad_tag_progressbar">bigo_ad_tag_progressbar</string>
    <string name="bigo_ad_tag_title">bigo_ad_tag_title</string>
    <string name="bigo_ad_title_default">Fantastic and interesting</string>
    <string name="bigo_ad_webview_loading">Loading</string>
    <string name="bigo_ad_word_icon_guid">Apps you may like</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="browser_hostname_content_description">Host name</string>
    <string name="btn_browser_backward_content_description">Backward</string>
    <string name="btn_browser_close_content_description">Close</string>
    <string name="btn_browser_forward_content_description">Forward</string>
    <string name="btn_browser_open_content_description">Open in external browser</string>
    <string name="btn_browser_refresh_content_description">Refresh</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="campaign.appName">getAppName</string>
    <string name="campaign.iconUrl">getIconUrl</string>
    <string name="campaign.imageUrl">getImageUrl</string>
    <string name="cancel">Cancel</string>
    <string name="dark">Dark(Recommended)</string>
    <string name="dialog_gps_title">GPS strength</string>
    <string name="dialog_hud_checkbox">Don\'t show again</string>
    <string name="dialog_hud_message">Place your phone under the windshield to project the speed onto the glass.</string>
    <string name="dialog_hud_title">HUD Mode</string>
    <string name="dialog_location_permission_API_31_hint">We need to use your precise location.\n\nPlease open Settings › Location access and make sure:\n1. Permission is set to Allow only while using the app\n2. Use precise location is turned on.</string>
    <string name="dialog_location_permission_title">Location Access Required</string>
    <string name="dialog_location_service_negative">No Thanks</string>
    <string name="dialog_location_service_positive">Turn on</string>
    <string name="exit">Exit</string>
    <string name="history">History</string>
    <string name="inactive">Inactive</string>
    <string name="latitude">Latitude</string>
    <string name="light">Light</string>
    <string name="location_information">Location Information</string>
    <string name="longitude">Longitude</string>
    <string name="odometer">Odometer</string>
    <string name="satellite">Satellite</string>
    <string name="setting">Setting</string>
    <string name="speed">Speed</string>
    <string name="theme">Theme</string>
</resources>