<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_odometer"
        android:id="@+id/menu_odometer"
        android:title="@string/odometer"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_history"
        android:id="@+id/menu_history"
        android:title="@string/history"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_setting"
        android:id="@+id/menu_setting"
        android:title="@string/setting"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_exit"
        android:id="@+id/menu_exit"
        android:title="@string/exit"
        app:showAsAction="ifRoom"/>
</menu>
