<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_location"
                app:tint="@color/colorPrimaryText"/>
            <TextView
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:id="@+id/titleLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/location_information"
                android:textAlignment="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/colorSecondaryText"
                android:id="@+id/gpsTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/dialog_gps_title"
                android:textAllCaps="true"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleLabel"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/colorSecondaryText"
                android:id="@+id/satelliteTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/satellite"
                android:textAllCaps="true"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gpsTitleLabel"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/colorSecondaryText"
                android:id="@+id/speedTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/speed"
                android:textAllCaps="true"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/satelliteTitleLabel"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/colorSecondaryText"
                android:id="@+id/latitudeTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/latitude"
                android:textAllCaps="true"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speedTitleLabel"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/colorSecondaryText"
                android:id="@+id/longitudeTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/longitude"
                android:textAllCaps="true"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latitudeTitleLabel"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/colorSecondaryText"
                android:id="@+id/altitudeTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/altitude"
                android:textAllCaps="true"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/longitudeTitleLabel"/>
            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="altitudeTitleLabel,longitudeTitleLabel,latitudeTitleLabel,gpsTitleLabel,speedTitleLabel"/>
            <TextView
                android:textColor="@color/colorPrimaryText"
                android:id="@+id/gpsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inactive"
                android:layout_marginEnd="16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/gpsTitleLabel"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:textColor="@color/colorPrimaryText"
                android:id="@+id/satelliteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="–"
                android:layout_marginEnd="16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/satelliteTitleLabel"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:textColor="@color/colorPrimaryText"
                android:id="@+id/speedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="–"
                android:layout_marginEnd="16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/speedTitleLabel"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:textColor="@color/colorPrimaryText"
                android:id="@+id/latitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="–"
                android:layout_marginEnd="16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/latitudeTitleLabel"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:textColor="@color/colorPrimaryText"
                android:id="@+id/longitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="–"
                android:layout_marginEnd="16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/longitudeTitleLabel"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:textColor="@color/colorPrimaryText"
                android:id="@+id/altitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="–"
                android:layout_marginEnd="16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/altitudeTitleLabel"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:textColor="@color/colorPrimaryText"
                android:id="@+id/addressLabel"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="-"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/altitudeTitleLabel"/>
            <ImageView
                android:id="@+id/gpsImageView"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_gps_none"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/gpsLabel"
                app:layout_constraintEnd_toStartOf="@+id/gpsLabel"
                app:layout_constraintTop_toTopOf="@+id/gpsLabel"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
